--- a/styles.css
+++ b/styles.css
@@ -47,10 +47,287 @@ table {
 	border-spacing: 0;
 }
 
+
+
 :root{
-    --font-family:'Arial', 'Helvetica', 'sans-serif'
+    --font-family:'Arial', 'Helvetica', 'sans-serif';
     --teal:#007d7b;
     --white:#ffffff;
     --black:#000000;
-    
+}
+
+
+/*media query small - global styles*/
+
+@media screen and (min-width:485px){
+	html{
+		margin:0 25px;
+		line-height: 1.5;
+		background-color:var(--black);
+		display:flex;
+		font-family: var(--font-family);
+	}
+
+	body{
+		display:grid;
+		position:relative;
+		justify-content: center;
+		background-color: var(--black);
+		font-family: var(--font-family);
+			
+	}
+
+	header{
+		background-color: var(--black);
+		color:var(--black);
+		display:grid;
+		position:relative;
+		justify-content: center;
+		
+	}
+
+	h1{
+		font-size: 3em;
+		color:var(--teal);
+		background-color:var(--white);
+		font-weight: 600;
+		
+
+	}
+
+	nav{
+		background-color: var(--black);
+		color:var(--white);
+		display: flex;	
+		position:relative;
+		justify-content: center;
+		margin: 30px 0;
+
+	}
+
+	nav ul{
+		display:inline-flex;
+	}
+	nav a{
+		text-decoration: none;
+		color:var(--white);
+		font-size:1.5em;
+		font-weight: 600;
+	}
+
+	li{
+		padding:0 10px;
+	}
+
+	ul li:nth-child(4){
+		display: flex;
+		position: fixed;
+		left: 406px;
+		top: 418px;
+		border: 5px solid var(--white);
+		border-radius: 2px;
+		padding: 10px;
+		background-color:var(--black);
+		z-index:2;
+	}
+
+	main{
+		background-color: var(--white);
+		color:var(--black);
+		padding:5px;
+	}
+
+	h2{
+		font-size: 2em;
+		font-weight: 600;
+		justify-content: center;
+		position:relative;
+		display:flex;
+	}
+
+	p{
+		font-size: 1.25em;
+		line-height: 1.5;
+		padding:10px 0;
+	}
+
+	figure{
+		display:grid;
+		grid-template-columns: 1fr;
+		padding:10px 5px;
+	}
+
+	figcaption{
+		display:flex;
+		position:relative;
+	}
+
+	#place1{
+	display:flex;
+	position:relative;
+	justify-content: center;
+	color:var(--white);
+	font-size:1em;
+	bottom:30px;
+	}
+
+	#place2{
+		display:flex;
+		position:relative;
+		justify-content: center;
+		color:var(--white);
+		font-size:1em;
+		bottom:270px;
+	}
+
+	#place3{
+		display:flex;
+		position:relative;
+		justify-content: center;
+		color:var(--white);
+		font-size:1em;
+		bottom:30px;
+	}
+
+	#place4{
+		display:flex;
+		position:relative;
+		justify-content: center;
+		color:var(--black);
+		font-size:1em;
+		bottom:615px;
+	}
+
+	#place5{
+		display:flex;
+		position:relative;
+		justify-content: center;
+		color:var(--black);
+		font-size:1em;
+		bottom:615px;
+	}
+
+	#place6{
+		display:flex;
+		position:relative;
+		justify-content: center;
+		color:var(--black);
+		font-size:1em;
+		bottom:25px;
+	}
+
+	#place7{
+		display:flex;
+		position:relative;
+		justify-content: center;
+		color:var(--white);
+		font-size:1em;
+		bottom:30px;
+	}
+
+	#place8{
+		display:flex;
+		position:relative;
+		justify-content: center;
+		color:var(--black);
+		font-size:1em;
+		bottom:265px;
+	}
+
+	#place9{
+		display:flex;
+		position:relative;
+		justify-content: center;
+		color:var(--black);
+		font-size:1em;
+		bottom:265px;
+	}
+
+	#place10{
+		display:flex;
+		position:relative;
+		justify-content: center;
+		color:var(--black);
+		font-size:1em;
+		bottom:265px;
+	}
+
+	#place11{
+		display:flex;
+		position:relative;
+		justify-content: center;
+		color:var(--black);
+		font-size:1em;
+		bottom:265px;
+	}
+
+	#place12{
+		display:flex;
+		position:relative;
+		justify-content: center;
+		color:var(--white);
+		font-size:1em;
+		bottom:265px;
+	}
+
+	section{
+		background-color: var(--black);
+		position: relative;
+		
+	}
+
+	section h2, section p, label{
+	color:var(--white);
+	}
+
+	section h2{
+		font-size: 2em;
+		display:flex;
+		position:relative;
+		justify-content: center;
+	}
+
+	section p{
+		font-size: 1.25em;
+		display:flex;
+		position:relative;
+		justify-content: center;
+		justify-items: center;
+		padding:15px 20px;
+		flex-wrap: wrap;
+	}
+
+	form{
+		display:grid;
+		justify-content: center;
+	}
+
+	input{
+		font-size: 1em;
+		color:var(--teal);
+	}
+
+	label{
+		font-size: 1em;
+		padding-left: 5px;
+	}
+
+	#mysubmit{
+		background-color: var(--teal);
+		color:var(--white);
+		border: 2px solid var(--teal);
+		border-radius: 5px;
+		margin-bottom: 10px;
+	}
+
+	footer small{
+		font-size: 1em;
+		color: var(--white);
+		display:flex;
+		justify-content: center;
+	}
+
+	footer p{
+		font-size: 1em;
+	}
 }
