--- a/styles.css
+++ b/styles.css
@@ -415,3 +415,67 @@ table {
 		padding-top:20px;
 	}
 }
+
+/*media query large*/
+@media screen and (min-width:1300px) {
+	
+	body{
+		min-width: 1300px;
+	}
+	header{
+		width: 1300px;
+	}
+	main{
+		width:1300px;
+		box-sizing: border-box;
+		padding: 5px;
+        margin-right: 30px;
+	}
+
+	main h2, main p{
+		width:1300px;
+	}
+
+	h1{
+		justify-self:left;
+		width: 1300px;
+		padding:5px;
+	}
+	nav{
+		width:1300px;
+		justify-content: right;
+	}
+
+	div{
+		display:grid;
+		grid-template-columns: 1fr 1fr 1fr;
+		grid-gap: 1px;
+
+	}
+
+	section p, section h2{
+		width:1300px;
+		box-sizing: border-box;
+	}
+
+	section{
+		width:1300px;
+	} 
+
+	input{
+		width: 800px;
+	}
+
+	#mysubmit{
+		width:450px;
+	}
+
+	ul li:nth-child(4){
+		left: 1245px;
+        top: 700px;
+    }
+
+	footer{
+		width: 1300px;
+	}
+}
